<resources>
    <string name="app_name">Be Safe</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="fire_message">There is a fire out break, please help!</string>
    <string name="robbery_message">There is a robbery on going, please help!</string>
    <string name="terrror_attack_message">There is a terrrorist attack, please help!</string>
    <string name="murder_message">Some one was just murdered, please help!</string>
    <string name="accident_message">There is an accident that just happpend, please help!</string>
    <string name="suicide_message">There is a suicide attempt, please help!</string>
    <string name="natural_disaster_message">There is a natural disaster, please help!</string>
    <string name="emergency_others">There is an emergency situation. Please help!</string>
    <string name="phone_number">08069036740</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Arnold Dispatch</string>
    <string name="title_activity_main_view">MainView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="GPSAlertDialogTitle">GPS Required</string>
    <string name="GPSAlertDialogMessage">In order to get your location and send it as part of the SOS dispatch, we will need you to enable your GPS.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="generic_failure">Dispatch not sent. Generic failure</string>
    <string name="result_ok">SOS has been sent to dispatch numbers.</string>
    <string name="no_service">SOS not sent. No service</string>
    <string name="null_pdu">SOS not sent. Null PDU</string>
    <string name="radio_off">SOS not sent. Radio off</string>
    <string name="googlemap_endpoint">http://maps.googleapis.com/maps/api/geocode/jsonlatlng=</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_dispatch_numbers">DispatchNumbersActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="db_name">app.db</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Dispatch</string>
    <string name="nav_movies">History</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Dispatch</item>
        <item>History</item>
        <item>Settings</item>
        <item>How To Be Safe</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="how_to_be_safe">How to Be Safe</string>
    <string name="fail_safe_notification_fail_message">Cannot send false positive.</string>
    <string name="location_request_dialog_timeout">PERMISSION_DIALOG_TIMEOUT</string>
    <string name="sms_notification_title">Be Safe - SMS Status</string>
    <string name="sms_delivered">SMS Dispatch delivered.</string>
    <string name="sms_not_delivered">SMS Dispatch not delivered.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="control_unit_notification_title">Be Safe - Control Unit Dispatch Status</string>
    <string name="control_unit_dispatch_ok_message">SOS dispatched to control unit. Please await their response.</string>
    <string name="control_unit_dispatch_fail_message">SOS not dispatched to control unit.</string>
    <string name="fail_safe_notification_title">"Be Safe - Fail Safe "</string>
    <string name="fail_safe_notification_ok_message">False positive sent.</string>
    <string name="fail_safe_ok_message">Please ignore it is a false positive.</string>
    <string name="tracking_dialog_title">Tracking</string>
    <string name="tracking_dialog_messge">Do you want to allow \'Be Safe\' to track you?</string>
    <string name="title_activity_how_to">HowToActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="message_endpoint">http://169.254.85.227/message/</string>
    <string name="yes">Yes</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="disclaimer">By clicking continue, you agree to the terms and conditions and privacy policy of \'Be Safe\'.</string>

</resources>
